--- a/src/app/eventcard/answertab/answertab.component.html
+++ b/src/app/eventcard/answertab/answertab.component.html
@@ -20,8 +20,9 @@
    <ons-list *ngFor="let value of labels ; index as z">
      <ons-list-header>{{value}}</ons-list-header>
      <span *ngFor="let s of attendees ; index as y">
+     <ons-list-item>{{s.lastname}} {{s.firstname}}</ons-list-item>  
      <ons-list-item *ngIf="s[(eventA.structure[1].rows[sum].field)]==value" >
-       {{s.lastname}}
+      <b> {{s.lastname}} </b>
      </ons-list-item>   
      </span>  
    </ons-list> 
