--- a/src/app/eventcard/answertab/answertab.component.css
+++ b/src/app/eventcard/answertab/answertab.component.css
@@ -4,4 +4,8 @@
 flex-grow: 1;
 width: 40%;
   padding-bottom: 10px;
+  padding-left:5px;
 }
+.list-header { background: #00a794;font-weight: 600; color: white;}
+.card_subhead {color: #7413dc;}
+.green  { background: #00a794; color: white;font-weight:600; padding-left:5px;}
