--- a/src/app/eventcard/attendancetab/attendancetab.component.css
+++ b/src/app/eventcard/attendancetab/attendancetab.component.css
@@ -5,6 +5,23 @@
 .table{ border-top: solid; padding-top: 5px; display: flex; flex-wrap: wrap; border-width: 1px;}
 .table_row{ 
 flex-grow: 1;
-width: 40%;
+width: 50%;
   padding-bottom: 10px;
+}
+.table_row2{ 
+flex-grow: 1;
+width: 90%;
+
+font-size:10pt;
+}
+.table_row3{ 
+flex-grow: 1;
+width: 90%;
+font-weight: 600;
+}
+.table_row4{ 
+flex-grow: 1;
+width: 10%;
+
+ 
 }
