--- a/src/app/eventcard/answertab/answertab.component.html
+++ b/src/app/eventcard/answertab/answertab.component.html
@@ -7,12 +7,12 @@
    <p class="card_subhead">Show Summary for</p>
  <p>
  <ons-select id="choose-sel" (change)="editSelects($event)" id="selectfield" modifier="underbar">
-    <option value="{{z}}" *ngFor="let value of eventA.structure[1].rows ; index as z" >      
-      <ons-icon style="color: green;" icon="fa-coins"  *ngIf="value.field.substring(0, 1) == 'p'"></ons-icon><ons-icon icon="fa-info-circle"  style="color: blue;" *ngIf="value.field.substring(0, 1) != 'p'"></ons-icon>
-    {{eventA.structure[1].rows[z].name}} {{value.field}}
+    <option value="{{z}}" *ngFor="let value of eventA.structure[1].rows ; index as z" >
+    {{eventA.structure[1].rows[z].name}} 
     </option>
     </ons-select></p> 
     
+
    <span *ngIf="sum != eventA.structure[1].rows.length -1 " >  
    <p *ngIf="eventA.structure[1].rows[sum].pL != ''"><b>Parents Portal:</b> {{eventA.structure[1].rows[sum].pL}}</p>
    <div  class="table green">
