--- a/src/app/progcard/progcard.component.html
+++ b/src/app/progcard/progcard.component.html
@@ -3,7 +3,7 @@
 		<ons-back-button>Back</ons-back-button>
 	</div>
   <div class="center">
-        {{globals.application}} 
+        {{globals.application}} {{prog.items[0].title}}
       </div>
 	<div class="right">
      
@@ -20,6 +20,6 @@
   <ons-tab label="Register" icon="fa-users" [page]="attendancetab"></ons-tab> 
   <ons-tab label="Groups" icon="fa-list-alt" [page]="answertab"></ons-tab>
 </ons-tabbar>
-
+.
   
 </div> 
