--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -4,5 +4,5 @@
 .notifcation.green { background: #23a950;}
 .ecount { width: 50px; border-left: solid; border-width: 1px; padding-left: 5px}
 .bot_ecount {font-size: 12px;}
-.top_ecount {font-size: 12px;}
+.top_ecount {font-size: 12px; padding-bottom: 2px;}
 .notification {border-radius: 0px;}
