--- a/src/app/progcard/progcard.component.html
+++ b/src/app/progcard/progcard.component.html
@@ -3,7 +3,7 @@
 		<ons-back-button>Back</ons-back-button>
 	</div>
   <div class="center">
-        {{globals.application}} {{prog.items[0].title}}
+        {{globals.application}}
       </div>
 	<div class="right">
      
