--- a/src/app/programme/programme.component.html
+++ b/src/app/programme/programme.component.html
@@ -34,7 +34,9 @@
           </span>
         <span class="list-item__subtitle">{{eventdates(prog.meetingdate,null)}}<span *ngIf="prog.starttime != '00:00:00'"> from {{timeformat(prog.starttime)}}</span><span *ngIf="prog.endtime != '00:00:00'"> until {{timeformat(prog.endtime)}}</span></span>
         <span class="right" >
-          
+          <ons-icon icon="fa-hands-helping" style="color: limegreen;" class="helper" *ngIf="helpers(prog.eveningid)==3"></ons-icon>
+          <ons-icon icon="fa-hands-helping" style="color: orange;" class="helper" *ngIf="helpers(prog.eveningid)==2"></ons-icon>
+          <ons-icon icon="fa-hands-helping" style="color: red;" class="helper" *ngIf="helpers(prog.eveningid)==1"></ons-icon>
         </span>
 </ons-list-item>
   </span>
