--- a/src/app/progcard/summarytab/summarytab.component.css
+++ b/src/app/progcard/summarytab/summarytab.component.css
@@ -1,2 +1,7 @@
 .head { color: #7413dc; font-size: 16pt; font-weight: 600;}
 .subhead { font-size: 10pt;color: #7413dc;}
+.thead  { font-size: 10pt;background: #00a794  ;color: white;padding: 2px;}
+.theadl  { width: 90%;font-size: 10pt;background:#00a794;color: white;padding: 2px;}
+.theadr  { width: 10%; text-align: center; font-size: 10pt;background:#00a794;color: white;padding: 2px;}
+.theadp  { display:flex}
+.theadb { border: solid; border-width: 1px; border-color:#7413dc; font-size:10pt; padding:5px;}
