--- a/src/app/progcard/summarytab/summarytab.component.html
+++ b/src/app/progcard/summarytab/summarytab.component.html
@@ -4,16 +4,32 @@
    <p>{{prog.items[0].notesforparents}}</p>
 </ons-card>     
 <ons-card>
+<span class="head">Adults</span>  
 <p class="subhead">Leaders</p>
 <div *ngFor="let ldr of prog.items[0].unavailableleaders; index as i">
   {{ldr.firstname}}&nbsp;{{ldr.lastname}} not Available
 </div>
-<div *ngIf="prog.items[0].unavailableleaders.length==0">All leaders present</div>     
-<p class="subhead">Parent Helpers</p>
+<div *ngIf="prog.items[0].unavailableleaders.length==0">All leaders present</div><br>
+<div *ngIf="prog.items[0].leaders != ''" class="theadp" (click)="toggle('ln')"><div  class="theadl">Leader Notes</div><div class="theadr">+</div></div> 
+<div style="display: none" *ngIf="prog.items[0].leaders != ''" class="theadb" id="ln">{{prog.items[0].leaders}}</div> 
+<p class="subhead">Parent Helpers ({{prog.items[0].parentsrequired}} needed)</p>
 <div *ngIf="prog.items[0].help.length==0">No parents helping</div> 
 <div *ngFor="let ldr of prog.items[0].help; index as i">
   <div (click)="go($event,ldr.scoutid);">Parents of <b>{{ldr.scout}}</b></div>
 </div>
 <div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) == 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more is needed</div>
 <div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) > 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more are needed</div>
-</ons-card>  
+<br>
+<div *ngIf="prog.items[0].notesforhelpingparents != null" class="theadp" (click)="toggle('pn')"><div  class="theadl">Parent Notes</div><div class="theadr">+</div></div> 
+<div style="display: none" *ngIf="prog.items[0].notesforhelpingparents != null" class="theadb" id="pn">{{prog.items[0].notesforhelpingparents}}</div>
+</ons-card>
+<ons-card>
+<span class="head">Notes</span>
+<div *ngIf="prog.items[0].prenotes=='' && prog.items[0].postnotes=='' && prog.items[0].games==''">You've not maintained any notes</div> 
+<p class="subhead" *ngIf="prog.items[0].prenotes!=''">Start Notes</p>
+<div class="theadb" *ngIf="prog.items[0].prenotes!=''">{{prog.items[0].prenotes}}</div>
+<p class="subhead" *ngIf="prog.items[0].games!=''">Games</p>
+<div class="theadb" *ngIf="prog.items[0].games!=''">{{prog.items[0].games}}</div>   
+<p class="subhead" *ngIf="prog.items[0].postnotes!=''">End Notes</p> 
+<div class="theadb" *ngIf="prog.items[0].postnotes!=''">{{prog.items[0].postnotes}}</div>  
+</ons-card>    
