--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -64,6 +64,12 @@
           <div class="member_name">Programme</div>
          </div> 
       </div>
+      <div class="member_outer" (click)="loadPage(rosta)">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-hands-helping"></ons-icon></div></div>
+          <div class="member_name">Parent Rosta</div>
+         </div> 
+      </div>
       <div class="member_outer" (click)="loadPage(sectionselect)">
            <div class="member_inner">
           <div class="member_box"><div class="member_initial"><ons-icon icon="fa-exchange-alt"></ons-icon></div></div>
