--- a/src/app/rosta/rosta.component.html
+++ b/src/app/rosta/rosta.component.html
@@ -16,7 +16,8 @@
    
         <div class="content">
        
-      <h2>Rosta</h2>
+   <div class="wrapper"><h2>Rosta</h2>     
+   <div id="infoi"> <ons-icon icon="fa-ellipsis-v"></ons-icon></div></div>
      
 
 
