--- a/src/app/rosta/rosta.component.html
+++ b/src/app/rosta/rosta.component.html
@@ -20,7 +20,6 @@
    <div id="infoi"> <ons-icon icon="fa-ellipsis-v"></ons-icon></div></div>
      
 
-
   <span  id="gridcontainer" *ngFor="let prog of globals.progs; index as i">
   <ons-card>
     <p><span class="head">{{prog.items[0].title}}</span><br>{{eventdates(prog.items[0].meetingdate,null)}}
@@ -31,7 +30,7 @@
     <div (click)="removehelper(i,j)" style="display:flex;"><div><ons-icon icon="fa-trash-alt" size="24px" class="helper"></ons-icon></div><div class="helper">{{parent.scout}}</div></div>
   </span>  
   <div style="display:flex;" (click)="addhelper(i)"><div><ons-icon icon="fa-user-plus" size="24px" class="helper"></ons-icon></div><div class="helper">Add another helper <span *ngIf="( prog.items[0].parentsrequired - prog.items[0].help.length ) > 0">({{prog.items[0].parentsrequired - prog.items[0].help.length }} more needed)</span></div></div>
-  <div  id="{{prog.items[0].eveningid}}" contenteditable="true" (blur)="alert(prog.items[0].eveningid)" (paste)="OnPaste_StripFormatting($event);">{{prog.items[0].notesforhelpingparents}}</div>
+  <div  id="{{prog.items[0].eveningid}}" contenteditable="true" (blur)="update_text(prog.items[0].eveningid)" (paste)="OnPaste_StripFormatting($event);">{{prog.items[0].notesforhelpingparents}}</div>
 
   </ons-card>
   </span>    
