--- a/src/app/rosta/rosta.component.html
+++ b/src/app/rosta/rosta.component.html
@@ -30,7 +30,7 @@
     <div (click)="removehelper(i,j)" style="display:flex;"><div><ons-icon icon="fa-trash-alt" size="24px" class="helper"></ons-icon></div><div class="helper">{{parent.scout}}</div></div>
   </span>  
   <div style="display:flex;" (click)="addhelper(i)"><div><ons-icon icon="fa-user-plus" size="24px" class="helper"></ons-icon></div><div class="helper">Add another helper <span *ngIf="( prog.items[0].parentsrequired - prog.items[0].help.length ) > 0"><b>({{prog.items[0].parentsrequired - prog.items[0].help.length }} more needed)</b></span></div></div>
-  <div  id="{{prog.items[0].eveningid}}" contenteditable="true" (blur)="update_text(prog.items[0].eveningid)" (paste)="OnPaste_StripFormatting($event);">{{prog.items[0].notesforhelpingparents}}</div>
+  <div  id="{{prog.items[0].eveningid}}" class="longtext" contenteditable="true" placeholder="Enter a parents text..." (blur)="update_text(prog.items[0].eveningid)" (paste)="OnPaste_StripFormatting($event);">{{prog.items[0].notesforhelpingparents}}</div>
 
   </ons-card>
   </span>    
