--- a/src/app/rosta/rosta.component.css
+++ b/src/app/rosta/rosta.component.css
@@ -1,4 +1,5 @@
-.head { color: #7413dc; font-size: 16pt; font-weight: 600;}
+.head { color: #7413dc; font-size: 16pt; font-weight: 600; margin-top: 0px;}
+.head2 { margin-top: 0px;} 
 .subhead { font-size: 10pt;color: #7413dc;}
 .helper { padding: 5px;}
 .but { color: #00a794; }
