--- a/src/app/rosta/rosta.component.css
+++ b/src/app/rosta/rosta.component.css
@@ -28,3 +28,26 @@
     content: "";
 }
 .longtext {border:solid; padding: 5px; font-size: 10pt;}
+.dialog { width:90%; height: 90%}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+ 
+  background:#ddd;
+ 
+}
+#myDropdown { max-height: 250px;
+  overflow-y: scroll; width: 80%}
+.dropdown-content a:hover {background-color: #00a794;}
+#myInput {width: 80%; font-size:24pt;}
+.footer {    position: absolute;
+    bottom: 10px;
+    right: 0;
+    left: 0;
+        text-align: center;
+    /* text-align: center; */
+    margin-left: auto;
+    margin-right: auto;}
