--- a/src/app/rosta/rosta.component.html
+++ b/src/app/rosta/rosta.component.html
@@ -37,23 +37,23 @@
 
 </div><!--List-->
     </ons-page>
-<ons-dialog animation="default" cancelable id="dialog" style="width:100%; height:100%">
+<ons-dialog animation="default" cancelable id="dialog" >
     <div class="dialog-mask"></div>
       <div class="dialog">
-        <div class="dialog-container" style="height: 200px;">
+        <div class="dialog-container" style="height: 100%">
           <ons-page>
             <ons-toolbar>
-              <div class="center">Name</div>
+              <div class="center">Select a Helper</div>
             </ons-toolbar>
             <div class="content">
-              <div style="text-align: center">
-                <p>This is just an example.</p>
-                <br>
-                <div style="max-height: 300px;
-  overflow-y: scroll;"><div *ngFor="let member of members; index as i">
+              <div style="text-align: left; padding: 20px;">
+                Select a member
+                <input type="text" placeholder="Search.." id="myInput" (keyup)="filterFunction()">
+              
+                <div  id="myDropdown" class="dropdown-content"><a *ngFor="let member of members; index as i" (click)="clickmember(member.scoutid)">
                   {{member.first_name}}&nbsp;{{member.last_name}}
-                </div>  </div>
-                <ons-button (click)="dialog.hide()">Close</ons-button>
+                </a>  </div>
+                <div  class="footer"><div class="footer"><ons-button (click)="dialog.hide()">Close</ons-button>&nbsp;<ons-button (click)="dialog.hide()">Add</ons-button></div></div>
               </div>
             </div>
           </ons-page>
