--- a/src/app/rosta/rosta.component.html
+++ b/src/app/rosta/rosta.component.html
@@ -53,7 +53,8 @@
                 <div  id="myDropdown" class="dropdown-content"><a *ngFor="let member of members; index as i" (click)="clickmember(member)">
                   {{member.first_name}} {{member.last_name}}
                 </a>  </div>
-                <div  class="footer"><div class="footer"><ons-button (click)="dialog.hide()">Close</ons-button>&nbsp;<ons-button (click)="dialog.hide()" *ngIf='add_active()'>Add</ons-button><ons-button (click)="dialog.hide()" disabled="true" *ngIf='!add_active()'>Add</ons-button></div></div>
+                
+                <div  class="footer"><div class="footer"><ons-button (click)="click_close()">Close</ons-button>&nbsp;<ons-button (click)="click_add()" *ngIf='add_active()'>Add</ons-button><ons-button (click)="dialog.hide()" disabled="true" *ngIf='!add_active()'>Add</ons-button></div></div>
               </div>
             </div>
           </ons-page>
