--- a/src/app/rosta/rosta.component.html
+++ b/src/app/rosta/rosta.component.html
@@ -54,7 +54,7 @@
                   {{member.first_name}} {{member.last_name}}
                 </a>  </div>
                 
-                <div  class="footer"><div class="footer"><ons-button (click)="click_close()">Close</ons-button>&nbsp;<ons-button (click)="click_add()" *ngIf='add_active()'>Add</ons-button><ons-button (click)="dialog.hide()" disabled="true" *ngIf='!add_active()'>Add</ons-button></div></div>
+                <div  class="footer"><div class="footer"><ons-button (click)="click_close()">Close</ons-button>&nbsp;<ons-button (click)="click_add(1)" *ngIf='add_active()'>Add</ons-button><ons-button (click)="dialog.hide()" disabled="true" *ngIf='!add_active()'>Add</ons-button>&nbsp;<ons-button (click)="dialog.hide()" disabled="true" *ngIf='!add_active()'>Add and Continue</ons-button><ons-button (click)="click_add(0)" *ngIf='add_active()'>Add and Continue</ons-button></div></div>
               </div>
             </div>
           </ons-page>
