--- a/src/app/rosta/rosta.component.html
+++ b/src/app/rosta/rosta.component.html
@@ -25,7 +25,7 @@
     <p class="head2"><span class="head">{{prog.items[0].title}}</span><br>{{eventdates(prog.items[0].meetingdate,null)}}
     <span *ngIf="prog.items[0].starttime != '00:00:00'"> from {{timeformat(prog.items[0].starttime)}}</span><span *ngIf="prog.items[0].endtime != '00:00:00'"> until {{timeformat(prog.items[0].endtime)}}</span></p>
  <span class="butlab"><span (click)="adjust(prog.items[0].eveningid,-1)">&nbsp;<ons-icon icon="fa-minus-circle" size="24px" class="but"></ons-icon></span>&nbsp;<span class="helpcount">{{prog.items[0].parentsrequired}}</span>&nbsp;<span><ons-icon icon="fa-plus-circle" size="24px" (click)="adjust(prog.items[0].eveningid,1)" class="but"></ons-icon></span>&nbsp;helpers are needed for this activity</span>
- <br> 
+ <br> o
   <span *ngFor="let parent of prog.items[0].help; index as j">
     <div (click)="removehelper(i,j)" style="display:flex;"><div><ons-icon icon="fa-trash-alt" size="24px" class="helper"></ons-icon></div><div class="helper">{{parent.scout}}</div></div>
   </span>  
@@ -48,7 +48,7 @@
             <div class="content">
               <div style="text-align: left; padding: 20px;">
                 Select a member
-                <input type="text" placeholder="Search.." id="myInput" (keyup)="filterFunction()">
+                <input (blur)="sellist(1)" (focus)="sellist(0)" type="text" placeholder="Search.." id="myInput" (keyup)="filterFunction()">
               
                 <div  id="myDropdown" class="dropdown-content"><a *ngFor="let member of members; index as i" (click)="clickmember(member)">
                   {{member.first_name}} {{member.last_name}}
