--- a/src/app/rosta/rosta.component.css
+++ b/src/app/rosta/rosta.component.css
@@ -51,3 +51,6 @@
     /* text-align: center; */
     margin-left: auto;
     margin-right: auto;}
+
+    .tag {border: solid;     padding: 2px;
+    margin: 2px;display: flex; }
