--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -82,7 +82,7 @@
           <div class="member_name">Terms</div>
          </div> 
       </div>
-   <span *ngIf="access.permissions.hasOwnProperty('empty')==true">You have no access to this srction</span>
+   <!--<span *ngIf="access.permissions.hasOwnProperty('empty')==true">You have no access to this srction</span>-->
 
      
     
