--- a/src/app/rosta/rosta.component.html
+++ b/src/app/rosta/rosta.component.html
@@ -27,7 +27,7 @@
  <span class="butlab"><span (click)="adjust(prog.items[0].eveningid,-1)">&nbsp;<ons-icon icon="fa-minus-circle" size="24px" class="but"></ons-icon></span>&nbsp;<span class="helpcount">{{prog.items[0].parentsrequired}}</span>&nbsp;<span><ons-icon icon="fa-plus-circle" size="24px" (click)="adjust(prog.items[0].eveningid,1)" class="but"></ons-icon></span>&nbsp;helpers are needed for this activity</span>
  <br> 
   <span *ngFor="let parent of prog.items[0].help; index as j">
-    <div (click)="removehelper(i,j)" style="display:flex;"><div><ons-icon icon="fa-trash-alt" size="24px" class="helper"></ons-icon></div><div class="helper">{{parent.scout}}</div></div>
+    <div  style="display:flex;"><div (click)="removehelper(i,j)"><ons-icon icon="fa-trash-alt" size="24px" class="helper"></ons-icon></div><div class="helper">{{parent.scout}}</div></div>
   </span>  
   <div style="display:flex;" (click)="addhelper(i)"><div><ons-icon icon="fa-user-plus" size="24px" class="helper"></ons-icon></div><div class="helper">Add another helper <span *ngIf="( prog.items[0].parentsrequired - prog.items[0].help.length ) > 0"><b>({{prog.items[0].parentsrequired - prog.items[0].help.length }} more needed)</b></span></div></div>
   <div  id="{{prog.items[0].eveningid}}" class="longtext" contenteditable="true" placeholder="Enter a parents text..." (blur)="update_text(prog.items[0].eveningid)" (paste)="OnPaste_StripFormatting($event);">{{prog.items[0].notesforhelpingparents}}</div>
@@ -52,18 +52,17 @@
             <div class="content">
               <div style="text-align: left; padding: 20px;">
                
-                Select a member<br>
-                <input (blur)="sellist(1)" (focus)="sellist(0)" type="text" placeholder="Search.." id="myInput" (keyup)="filterFunction()">
-              
+                Select a member <br>
+                <input (blur)="sellist(1)" (focus)="sellist(0)" type="text" placeholder="Search.." id="myInput" (keyup)="filterFunction()"><ons-icon icon="fa-plus-circle" size="24pt" style="padding:5px;color: #7413dc; font-size: 24px;" (click)="click_add(1)" *ngIf='add_active()'></ons-icon><ons-icon icon="fa-plus-circle" style="padding:5px; color:#7413dc;opacity: .3; font-size: 24px; "  size="24pt"  *ngIf='!add_active()'></ons-icon>&nbsp;<ons-icon icon="fa-user-plus" size="24pt" style="padding:5px;color: #7413dc; font-size: 24px;" (click)="click_add(0)" *ngIf='add_active()'></ons-icon><ons-icon icon="fa-user-plus" style="padding:5px; color:#7413dc;opacity: .3; font-size: 24px; "  size="24pt"  *ngIf='!add_active()'></ons-icon>              
                 <div  id="myDropdown" class="dropdown-content"><a *ngFor="let member of members; index as i" (click)="clickmember(member)">
                   {{member.first_name}} {{member.last_name}}
                 </a>  </div>
                  <div *ngIf="selected_meeting!=-1" style="margin: 5px;">
-                 Currently Selected:
+                 {{globals.progs[selected_meeting].items[0].help.length}} currently Selected:
                 <div style="padding:5px; display: flex; flex-wrap: wrap;"><span *ngFor="let parent of globals.progs[selected_meeting].items[0].help; index as j">
     <div   class="tag"><div (click)="removehelper(selected_meeting,j)"><ons-icon icon="fa-times" style="padding:5px" ></ons-icon></div><div class="helper">{{parent.scout}}</div></div>
   </span> </div></div>
-                <div  class="footer"><div class="footer">&nbsp;<ons-button (click)="click_add(1)" *ngIf='add_active()'>Add</ons-button><ons-button (click)="dialog.hide()" disabled="true" *ngIf='!add_active()'>Add</ons-button>&nbsp;<ons-button (click)="dialog.hide()" disabled="true" *ngIf='!add_active()'>Add and Continue</ons-button><ons-button (click)="click_add(0)" *ngIf='add_active()'>Add and Continue</ons-button></div></div>
+                
               </div>
             </div>
           </ons-page>
