--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -78,8 +78,8 @@
               <div style="text-align: left; padding: 20px;">
                
                 Select a member <br>
-                
-                
+                <ons-input placeholder="Type here" [(value)]="target" type="date"></ons-input>
+                {{target}}
               </div>
             </div>
           </ons-page>
