--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -82,7 +82,7 @@
                 {{target}} {{getnamefordate(target)}}
               
               <div class="week" *ngFor="let week of weeks; index as i ">
-                <div (click)="" class="day" *ngFor="let day of week; index as j">{{day.date.getDate()}}</div>
+                <div  class="day" *ngFor="let day of week; index as j">{{day.date.getDate()}}</div>
                </div>  
 </div>
             </div>
