--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -88,5 +88,10 @@ width: 100px;
     height: 50px;
     line-height: 50px;
     text-align: center;}
+    .day2 {border: solid;
+width: 100px;
+    
+    
+    text-align: center;}
 .week {display: flex;}
 
