--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -85,12 +85,14 @@ float: left;
 .dialog { width:90%; height: 90%}
 .day {border: solid;
 width: 100px;
+max-width: 50px;
     height: 50px;
     line-height: 50px;
     text-align: center;}
     .day2 {border: solid;
 width: 100px;
-    
+
+max-width: 50px;    
     
     text-align: center;}
 .week {display: flex;}
